// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GameCard Snapshots > should match snapshot for coming soon card 1`] = `
<div
  class="
        relative overflow-hidden rounded-xl bg-gradient-to-br from-gray-800 to-gray-900
        border-2 transition-all duration-300
        border-gray-700 opacity-60 cursor-not-allowed
      "
  tabindex="0"
>
  <div
    class="absolute top-2 right-2 bg-secondary text-gray-900 text-xs font-bold px-2 py-1 rounded-full z-10"
  >
    Coming Soon
  </div>
  <div
    class="p-6"
  >
    <div
      class="flex items-center justify-center mb-4"
    >
      <div
        class="
            text-6xl p-4 rounded-full bg-gradient-to-br
            from-gray-700 to-gray-800
            transition-all duration-300
          "
      >
        🃏
      </div>
    </div>
    <h3
      class="text-xl font-bold text-white text-center mb-2"
    >
      Poker
    </h3>
    <p
      class="text-gray-400 text-sm text-center mb-4 min-h-[40px]"
    >
      Coming soon
    </p>
  </div>
</div>
`;

exports[`GameCard Snapshots > should match snapshot for regular game card 1`] = `
<div
  class="
        relative overflow-hidden rounded-xl bg-gradient-to-br from-gray-800 to-gray-900
        border-2 transition-all duration-300
        border-gray-700 hover:border-primary hover:shadow-lg hover:shadow-primary/30 cursor-pointer
      "
  tabindex="0"
>
  <div
    class="p-6"
  >
    <div
      class="flex items-center justify-center mb-4"
    >
      <div
        class="
            text-6xl p-4 rounded-full bg-gradient-to-br
            from-gray-700 to-gray-800 group-hover:from-primary group-hover:to-secondary
            transition-all duration-300
          "
      >
        🎰
      </div>
    </div>
    <h3
      class="text-xl font-bold text-white text-center mb-2"
    >
      Roulette
    </h3>
    <p
      class="text-gray-400 text-sm text-center mb-4 min-h-[40px]"
    >
      Classic casino game
    </p>
    <div
      class="flex items-center justify-center space-x-2 bg-gray-700 rounded-lg py-2"
    >
      <span
        class="text-gray-400 text-sm"
      >
        Minimum Bet:
      </span>
      <span
        class="text-secondary font-bold"
      >
        $10
      </span>
    </div>
  </div>
  <div
    class="absolute inset-0 bg-gradient-to-t from-primary/10 to-transparent opacity-0 hover:opacity-100 transition-opacity duration-300 pointer-events-none"
  />
</div>
`;
